test/libsolidity/syntaxTests/unexpected.sol
unexpected
// ----
// ParserError 7858: (0-10='unexpected'): Expected pragma, import directive or contract/interface/library/struct/enum/constant/function definition.
